--- a/voluntariado.html
+++ b/voluntariado.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forestaton</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <img src="/img/header.png" alt="header forestaton" />
+      <div class="parallax">
+      <div class="Imagen imagenCielo"></div>
+      <h2 class="tituloBanner">Forestaton</h2>
+      <h2 class="tituloBanner">Forestaton</h2>
+      <div class="Imagen imagenMontania"></div>
+    </div>
       <nav class="nav">
         <a href="index.html" id="navLogo">Forestaton</a>
         <a href="index.html" class="navA">Inicio</a>
@@ -69,5 +77,6 @@
     </div>
     <footer><p>footerfooter</p></footer>
     <script src="voluntarioForm.js"></script>
+    <script src="parallax.js"></script>
   </body>
 </html>
