--- a/noticias.html
+++ b/noticias.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/ac8abeaa44.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="main()">
 
    
         <h1 class="noticias_titulo">Noticias</h1>
