Agregado de header y footer a noticias

--- a/noticia.html
+++ b/noticia.html
@@ -9,7 +9,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="detalle()">
+    <header>
+        <nav class="nav">
+          <a href="index.html" id="navLogo">Forestaton</a>
+          <a href="index.html" class="navA">Inicio</a>
+          <a href="voluntariado.html" class="navA">Voluntariado</a>
+          <a href="noticias.html" class="navA">Noticias</a>
+          <a href="logIn.html" class="navA">Iniciar sesión</a>
+        </nav>
+      </header>
+
     <div id="noticia_detalle"></div>
+
+    <footer>
+        <div class="redes">
+          <span style="font-size: 3em;   background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);background-clip: text;">
+            <i class="fa-brands fa-square-instagram"></i>
+          </span>
+          <span style="font-size: 3em; color: #3b5998;">
+            <i class="fa-brands fa-square-facebook"></i>
+          </span>
+          <span style="font-size: 3em; color: #229ED9;">
+    
+            <i class="fa-brands fa-telegram"></i>
+          </span>
+          <span style="font-size: 3em; color: white;">
+            <i class="fa-brands fa-square-x-twitter"></i>
+          </span>
+        </div>
+        <div class="texto">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nam possimus, optio velit delectus
+          quisquam minima unde aspernatur quae dolorem explicabo nemo in neque maxime quia cum voluptatibus illum. Quod.
+        </div>
+        <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="">
+      </footer>
+      
     <script src="noticia.js"></script>
     <script src="noticias.js"></script>
 </body>
