--- a/noticias.html
+++ b/noticias.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="main()">
-
+  <header>
+    <nav class="nav">
+      <a href="index.html" id="navLogo">Forestaton</a>
+      <a href="index.html" class="navA">Inicio</a>
+      <a href="voluntariado.html" class="navA">Voluntariado</a>
+      <a href="noticias.html" class="navA">Noticias</a>
+      <a href="logIn.html" class="navA">Iniciar sesión</a>
+    </nav>
+  </header>
    
         <h1 class="noticias_titulo">Noticias</h1>
         <div class="buscador">
@@ -30,6 +38,29 @@
                           <a href="" class="leer_mas">Leer mas</a>
                       </div>
               </div>-->
+              <footer>
+                <div class="redes">
+                  <span style="font-size: 3em;   background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);background-clip: text;">
+                    <i class="fa-brands fa-square-instagram"></i>
+                  </span>
+                  <span style="font-size: 3em; color: #3b5998;">
+                    <i class="fa-brands fa-square-facebook"></i>
+                  </span>
+                  <span style="font-size: 3em; color: #229ED9;">
+            
+                    <i class="fa-brands fa-telegram"></i>
+                  </span>
+                  <span style="font-size: 3em; color: white;">
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                  </span>
+                </div>
+                <div class="texto">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nam possimus, optio velit delectus
+                  quisquam minima unde aspernatur quae dolorem explicabo nemo in neque maxime quia cum voluptatibus illum. Quod.
+                </div>
+                <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="">
+              </footer>
+              
               <script src="noticia.js"></script>
               <script src="noticias.js"></script>
 </body>
