Overflow en footer hidden

--- a/voluntariado.html
+++ b/voluntariado.html
@@ -9,12 +9,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/32c91c5a9f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header>
-    <!-- Paso algo raro en el parallax, hay una ventana blanca emergente, que no se la procedencia-->
+    <!-- Paso algo raro en el parallax, hay una ventana blanca emergente, que no se la procedencia. te estan hackeando hrmano tapa la camara!!-->
     <div class="parallax">
       <div class="Imagen imagenCielo"></div>
       <h2 class="tituloBanner">Forestaton</h2>
@@ -81,17 +82,17 @@
   <footer>
     <div class="redes">
       <span style="font-size: 3em;   background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);background-clip: text;">
-        <i class="fa-brands fa-square-instagram"></i>
+        <i class="fa-brands fa-square-instagram" style="overflow: hidden;"></i>
       </span>
       <span style="font-size: 3em; color: #3b5998;">
-        <i class="fa-brands fa-square-facebook"></i>
+        <i class="fa-brands fa-square-facebook" style="overflow: hidden;"></i>
       </span>
       <span style="font-size: 3em; color: #229ED9;">
 
-        <i class="fa-brands fa-telegram"></i>
+        <i class="fa-brands fa-telegram" style="overflow: hidden;"></i>
       </span>
       <span style="font-size: 3em; color: white;">
-        <i class="fa-brands fa-square-x-twitter"></i>
+        <i class="fa-brands fa-square-x-twitter" style="overflow: hidden;"></i>
       </span>
     </div>
     <div class="texto">
