Arregle iconos de footer en login. Despues reveo css

--- a/noticia.html
+++ b/noticia.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detalle</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -12,7 +9,14 @@
       src="https://kit.fontawesome.com/ac8abeaa44.js"
       crossorigin="anonymous"
     ></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Forestaton</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/32c91c5a9f.js" crossorigin="anonymous"></script>
   </head>
   <body onload="detalle()">
     <header>
