--- a/logIn.html
+++ b/logIn.html
@@ -16,6 +16,7 @@
           <a href="logIn.html" class="navA">Iniciar sesión</a>
         </nav>
       </header>
+      <div class="cienvehache">
       <div class="loginDiv">
         <img src="img/logo forestaton.png" alt="Logo" srcset="">
         <label for="">Ingrese su Usuario o mail</label>
@@ -23,7 +24,9 @@
         <label for="">Ingrese su contraseña</label>
         <input type="password" name="" id="">
         <h5><span>¿Ha olvidado su contraseña?</span></h5>
+        <button>Login</button>
       </div>
+    </div>
 
 
       <footer>
