Slide a medio terminar

--- a/index.html
+++ b/index.html
@@ -22,17 +22,29 @@
         </div>
         <nav class="nav">
           <a href="index.html" id="navLogo">Forestaton</a>
-          <a href="index.html" class="navA">Inicio</a>
-          <a href="voluntariado.html" class="navA">Voluntariado</a>
-          <a href="noticias.html" class="navA">Noticias</a>
-          <a href="logIn.html" class="navA">Iniciar sesión</a>
+          <a href="index.html" class="navA navActive"><i class="fa-solid fa-house"></i>Inicio</a>
+          <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i>Voluntariado</a>
+          <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i>Noticias</a>
+          <a href="logIn.html" class="navA"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
         </nav>
       </header>
-      <div class="contenedorIndex"></div>
+      <div class="contenedorIndex">
+        <div class="slide">
+          <i class="fa-solid fa-arrow-left" style="font-size: large; color: white;"></i>
+            <div>
+              <img src="img/ciudades_noticia.png" alt="Slide1" srcset="">
+            </div>
+            <div>
+              <img src="img/dia_animal.png" alt="Slide1" srcset="">
+            </div>
+            <i class="fa-solid fa-arrow-right" style="font-size: large; color: white;"></i>
+      </div>
       <div class="border-wrapper"></div>
-  <footer>
+      
+  
+   <footer>
     <div class="redes">
-      <span style="font-size: 3em;   background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);background-clip: text;">
+      <span class="instagramLogo">
         <i class="fa-brands fa-square-instagram" style="overflow: hidden;"></i>
       </span>
       <span style="font-size: 3em; color: #3b5998;">
@@ -53,5 +65,6 @@
     <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="">
   </footer>
   <script src="parallax.js"></script>
+  <script src="slider.js"></script>
 </body>
 </html>
