--- a/noticia.html
+++ b/noticia.html
@@ -40,13 +40,7 @@
 
     <footer>
       <div class="redes">
-        <span
-          style="
-            font-size: 3em;
-            background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);
-            background-clip: text;
-          "
-        >
+        <span class="instagramLogo">
           <i class="fa-brands fa-square-instagram" style="overflow: hidden"></i>
         </span>
         <span style="font-size: 3em; color: #3b5998">
