--- a/logIn.html
+++ b/logIn.html
@@ -25,18 +25,9 @@
     <a href="index.html" class="navA">Inicio</a>
     <a href="voluntariado.html" class="navA">Voluntariado</a>
     <a href="noticias.html" class="navA">Noticias</a>
-    <a href="logIn.html" class="navA">Iniciar sesión</a>
+    <a href="logIn.html" class="navA navActive">Iniciar sesión</a>
   </nav>
 </header>    
-<header>
-        <nav class="nav">
-          <a href="index.html" id="navLogo">Forestaton</a>
-          <a href="index.html" class="navA">Inicio</a>
-          <a href="voluntariado.html" class="navA">Voluntariado</a>
-          <a href="noticias.html" class="navA">Noticias</a>
-          <a href="logIn.html" class="navA">Iniciar sesión</a>
-        </nav>
-      </header>
       <div class="cienvehache">
       <div class="loginDiv">
         <img src="img/logo forestaton.png" alt="Logo" srcset="">
@@ -48,11 +39,9 @@
         <button>Login</button>
       </div>
     </div>
-
-
       <footer>
         <div class="redes">
-          <span style="font-size: 3em;   background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);background-clip: text;">
+          <span class="instagramLogo">
             <i class="fa-brands fa-square-instagram"></i>
           </span>
           <span style="font-size: 3em; color: #3b5998;">
