--- a/noticias.html
+++ b/noticias.html
@@ -31,7 +31,7 @@
         <a href="index.html" id="navLogo">Forestaton</a>
         <a href="index.html" class="navA">Inicio</a>
         <a href="voluntariado.html" class="navA">Voluntariado</a>
-        <a href="noticias.html" class="navA">Noticias</a>
+        <a href="noticias.html" class="navA navActive">Noticias</a>
         <a href="logIn.html" class="navA">Iniciar sesión</a>
       </nav>
     </header>
@@ -60,13 +60,7 @@
               </div>-->
     <footer>
       <div class="redes">
-        <span
-          style="
-            font-size: 3em;
-            background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);
-            background-clip: text;
-          "
-        >
+        <span class="instagramLogo">
           <i class="fa-brands fa-square-instagram" style="overflow: hidden"></i>
         </span>
         <span style="font-size: 3em; color: #3b5998">
