--- a/voluntariado.html
+++ b/voluntariado.html
@@ -25,7 +25,7 @@
     <nav class="nav">
       <a href="index.html" id="navLogo">Forestaton</a>
       <a href="index.html" class="navA">Inicio</a>
-      <a href="voluntariado.html" class="navA">Voluntariado</a>
+      <a href="voluntariado.html" class="navA navActive">Voluntariado</a>
       <a href="noticias.html" class="navA">Noticias</a>
       <a href="logIn.html" class="navA">Iniciar sesión</a>
     </nav>
@@ -81,7 +81,7 @@
   <div class="border-wrapper"></div>
   <footer>
     <div class="redes">
-      <span style="font-size: 3em;   background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);background-clip: text;">
+      <span class="instagramLogo">
         <i class="fa-brands fa-square-instagram" style="overflow: hidden;"></i>
       </span>
       <span style="font-size: 3em; color: #3b5998;">
