--- a/index.html
+++ b/index.html
@@ -29,16 +29,21 @@
         </nav>
       </header>
       <div class="contenedorIndex">
-        <div class="slide">
-          <i class="fa-solid fa-arrow-left" style="font-size: large; color: white;"></i>
+        <div class="integrarFlechas">
+           <i class="fa-solid fa-arrow-left flechaIzquierda" onclick="izquierda()"></i>
+           <div class="slide">
             <div>
               <img src="img/ciudades_noticia.png" alt="Slide1" srcset="">
             </div>
             <div>
               <img src="img/dia_animal.png" alt="Slide1" srcset="">
             </div>
-            <i class="fa-solid fa-arrow-right" style="font-size: large; color: white;"></i>
-      </div>
+          </div>
+          <i class="fa-regular fa-circle"></i>
+          <i class="fa-regular fa-circle"></i>
+          <i class="fa-regular fa-circle"></i>
+          <i class="fa-solid fa-arrow-right flechaDerecha" onclick="derecha()"></i>
+        </div>
       <div class="border-wrapper"></div>
       
   
