--- a/noticias.html
+++ b/noticias.html
@@ -29,10 +29,10 @@
       </div>
       <nav class="nav">
         <a href="index.html" id="navLogo">Forestaton</a>
-        <a href="index.html" class="navA">Inicio</a>
-        <a href="voluntariado.html" class="navA">Voluntariado</a>
-        <a href="noticias.html" class="navA navActive">Noticias</a>
-        <a href="logIn.html" class="navA">Iniciar sesión</a>
+        <a href="index.html" class="navA navActive"><i class="fa-solid fa-house"></i>Inicio</a>
+        <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i>Voluntariado</a>
+        <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i>Noticias</a>
+        <a href="logIn.html" class="navA"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
       </nav>
     </header>
 
