Resolucion de nav

--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
       </header>
       <div class="contenedorIndex">
         <div class="integrarFlechas">
+          <h2>Forestaton en cifras</h2>
            <i class="fa-solid fa-arrow-left flechaIzquierda" onclick="izquierda()"></i>
            <div class="slide">
             <div>
+              <!--Problema, al sacar el filter que tiene el div se pierde, deberiamos probar usando un alpha en el color de la imagen-->
+              <h4>5076 Árboles plantados</h4>
               <img src="img/ciudades_noticia.png" alt="Slide1" srcset="">
             </div>
             <div>
+              <h4>726 Voluntarios</h4>
               <img src="img/dia_animal.png" alt="Slide1" srcset="">
             </div>
           </div>
