--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
             <div>
               <!--Problema, al sacar el filter que tiene el div se pierde, deberiamos probar usando un alpha en el color de la imagen-->
               <h4>5076 Árboles plantados</h4>
-              <img src="img/ciudades_noticia.png" alt="Slide1" srcset="">
+              <div class="divImagen" style="
+  background-image: url(img/ciudades_noticia.png);"></div>
             </div>
             <div>
               <h4>726 Voluntarios</h4>
-              <img src="img/dia_animal.png" alt="Slide1" srcset="">
+              <div class="divImagen"></div>
             </div>
           </div>
           <i class="fa-regular fa-circle"></i>
