--- a/eventos.html
+++ b/eventos.html
@@ -52,7 +52,8 @@
           quisquam minima unde aspernatur quae dolorem explicabo nemo in neque maxime quia cum voluptatibus illum. Quod.
         </div>
         <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="">
-      </footer>
+      </footer> 
+      <script src="sesionHelper.js"></script>
       <script src="evento.js"></script>
       <script src="eventos.js"></script>
 </body>
