--- a/voluntariado.html
+++ b/voluntariado.html
@@ -101,6 +101,7 @@
     </div>
     <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="">
   </footer>
+  <script src="sesionHelper.js"></script>
   <script src="voluntarioForm.js"></script>
   <script src="parallax.js"></script>
 </body>
