--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="Imagen imagenMontania"></div>
         </div>
         <nav class="nav">
-          <a href="index.html" id="navLogo">Forestaton</a>
+          <a href="index.html" id="conditionalLink">Forestaton</a>
           <a href="index.html" class="navA navActive"><i class="fa-solid fa-house"></i>Inicio</a>
           <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i>Voluntariado</a>
           <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i>Noticias</a>
@@ -74,6 +74,7 @@
     </div>
     <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="">
   </footer>
+  <script src="sesionHelper.js"></script>
   <script src="parallax.js"></script>
   <script src="slider.js"></script>
 </body>
