--- a/noticia.html
+++ b/noticia.html
@@ -61,7 +61,7 @@
       </div>
       <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="" />
     </footer>
-
+    <script src="sesionHelper.js"></script>
     <script src="noticia.js"></script>
     <script src="noticias.js"></script>
     <script src="parallax.js"></script>
