Login en todas las paginas

--- a/eventos.html
+++ b/eventos.html
@@ -20,7 +20,8 @@
           <div class="Imagen imagenMontania"></div>
         </div>
         <nav class="nav">
-          <a href="index.html" id="navLogo">Forestaton</a>
+          <a href="index.html" id="conditionalLink">Forestaton</a>
+     
           <a href="index.html" class="navA">Inicio</a>
           <a href="voluntariado.html" class="navA">Voluntariado</a>
           <a href="noticias.html" class="navA">Noticias</a>
