--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="index.html" class="navA navActive"><i class="fa-solid fa-house"></i>Inicio</a>
           <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i>Voluntariado</a>
           <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i>Noticias</a>
-          <a href="logIn.html" class="navA"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
+          <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
         </nav>
       </header>
       <div class="contenedorIndex">
