--- a/eventos.html
+++ b/eventos.html
@@ -25,7 +25,7 @@
           <a href="index.html" class="navA">Inicio</a>
           <a href="voluntariado.html" class="navA">Voluntariado</a>
           <a href="noticias.html" class="navA">Noticias</a>
-          <a href="logIn.html" class="navA">Iniciar sesión</a>
+          <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
         </nav>
       </header>
       <div class="contenedor_eventos">
