--- a/noticias.html
+++ b/noticias.html
@@ -33,8 +33,8 @@
         <a href="index.html" class="navA navActive"><i class="fa-solid fa-house"></i>Inicio</a>
         <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i>Voluntariado</a>
         <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i>Noticias</a>
-        <a href="logIn.html" class="navA"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
-      </nav>
+        <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
+        </nav>
     </header>
 
     <h1 class="noticias_titulo">Noticias</h1>
