Añadido al index

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
         </nav>
       </header>
       <div class="contenedorIndex">
+
+        <div class="que_es_forestaton">
+          <h1>¿Que es forestaton?</h1>
+          <div class="descripcion_logo">
+            <div class="forestaton_descripcion">
+            <p>Somos una ONG que tiene como objetivo la forestación de especies vegetales nativas de la provincia de Córdoba y la transmisión de valores de respeto a la naturaleza y los bosques autóctonos. <br> <br> Es nuestra convicción que forestar tiene un impacto significativo para revertir los efectos del calentamiento global y el cambio climático.</p>
+
+            </div>
+            <img src="img/logo forestaton.png" alt="">
+          </div> 
+        </div>
+
         <div class="integrarFlechas">
           <h2 class="cifras_forestaton">Forestaton en cifras</h2>
           <div class="imagen_cifras">
