--- a/eventos.html
+++ b/eventos.html
@@ -32,7 +32,12 @@
               <h1 class="eventos_titulo"></h1>
               <div class="lista_eventos" id="contenedor" ></div>
       </div>
-      <footer>
+      <div class="dark">
+        <div>
+          
+        </div>
+      </div>
+        <footer>
         <div class="redes">
           <span style="font-size: 3em;   background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);background-clip: text;">
             <i class="fa-brands fa-square-instagram" style="overflow: hidden;"></i>
