--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
 
       <div class="border-wrapper"></div>
       
-  
+      <div class="dark">
+        <div>
+        </div>
+        
+        </div>
    <footer>
     <div class="redes">
       <span class="instagramLogo">
