--- a/voluntariado.html
+++ b/voluntariado.html
@@ -25,8 +25,8 @@
     <nav class="nav">
       <a href="index.html" id="conditionalLink">Forestaton</a>
      
-      <a href="index.html" class="navA navActive"><i class="fa-solid fa-house"></i>Inicio</a>
-      <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i>Voluntariado</a>
+      <a href="index.html" class="navA"><i class="fa-solid fa-house"></i>Inicio</a>
+      <a href="voluntariado.html" class="navA navActivespecial"><i class="fa-solid fa-handshake-angle"></i>Voluntariado</a>
       <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i>Noticias</a>
       <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
     </nav>
@@ -78,6 +78,11 @@
       </div>
     </div>
   <div class="border-wrapper"></div>
+  <div class="dark">
+    <div>
+    </div>
+        
+    </div>
   <footer>
     <div class="redes">
       <span class="instagramLogo">
