--- a/agregar.html
+++ b/agregar.html
@@ -9,13 +9,17 @@
 <body>
     <header>
         <nav class="nav">
-            <a href="index.html" id="conditionalLink">Forestaton</a>
-            <a href="index.html" class="navA navActive"><i class="fa-solid fa-house"></i>Inicio</a>
+            <a href="index.html" id="conditionalLink navActive">Forestaton</a>
+            <a href="index.html" class="navA"><i class="fa-solid fa-house"></i>Inicio</a>
             <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i>Voluntariado</a>
             <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i>Noticias</a>
             <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
           </nav>
     </header>
+    <div class="dark">
+        <div>
+        </div>
+        </div>
     <div id="root">
         <h4>Agregar Noticias</h4>
         <form action="">
