--- a/noticia.html
+++ b/noticia.html
@@ -30,15 +30,19 @@
       <nav class="nav">
         <a href="index.html" id="conditionalLink">Forestaton</a>
      
-        <a href="index.html" class="navA navActive"><i class="fa-solid fa-house"></i>Inicio</a>
+        <a href="index.html" class="navA"><i class="fa-solid fa-house"></i>Inicio</a>
         <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i>Voluntariado</a>
-        <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i>Noticias</a>
+        <a href="noticias.html" class="navA navActive"><i class="fa-solid fa-newspaper"></i>Noticias</a>
         <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
         </nav>
     </header>
 
     <div id="noticia_detalle"></div>
-
+    <div class="dark">
+      <div>
+      </div>
+        
+      </div>
     <footer>
       <div class="redes">
         <span class="instagramLogo">
