--- a/eventos.html
+++ b/eventos.html
@@ -29,9 +29,30 @@
         </nav>
       </header>
       <div class="contenedor_eventos">
-              <h1 class="eventos_titulo"></h1>
+              <h1 class="eventos_titulo">Eventos</h1>
+              <div class="agregar_evento" id="addEvento">
+                   <h2>Agregar evento</h2>
+              </div>
               <div class="lista_eventos" id="contenedor" ></div>
       </div>
+
+      <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Agregar nuevo evento</h2>
+            <form id="formAgregarEvento">
+                <label for="titulo">Título:</label>
+                <input type="text" id="titulo" name="titulo" required><br>
+                <label for="ubicacion">Ubicación:</label>
+                <input type="text" id="ubicacion" name="ubicacion" required><br>
+                <label for="fecha">Fecha:</label>
+                <input type="date" id="fecha" name="fecha" required><br>
+                <label for="hora">Hora:</label>
+                <input type="time" id="hora" name="hora" required><br>
+                <button type="submit">Agregar Evento</button>
+            </form>
+        </div>
+    </div>
       <div class="dark">
         <div>
           
