--- a/agregar.html
+++ b/agregar.html
@@ -16,7 +16,7 @@
             <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
           </nav>
     </header>
-    <div class="dark">
+    <div class="horizontal">
         <div>
         </div>
         </div>
