--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <div class="border-wrapper"></div>
       
-      <div class="dark">
+      <div class="horizontal">
         <div>
         </div>
         
