--- a/noticia.html
+++ b/noticia.html
@@ -38,7 +38,7 @@
     </header>
 
     <div id="noticia_detalle"></div>
-    <div class="dark">
+    <div class="horizontal">
       <div>
       </div>
         
