--- a/noticias.html
+++ b/noticias.html
@@ -81,7 +81,7 @@
                           <a href="" class="leer_mas">Leer mas</a>
                       </div>
               </div>-->
-              <div class="dark">
+              <div class="horizontal">
                 <div>
                 </div>
         
