--- a/voluntariado.html
+++ b/voluntariado.html
@@ -78,7 +78,7 @@
       </div>
     </div>
   <div class="border-wrapper"></div>
-  <div class="dark">
+  <div class="horizontal">
     <div>
     </div>
         
