--- a/eventos.html
+++ b/eventos.html
@@ -53,7 +53,7 @@
             </form>
         </div>
     </div>
-      <div class="dark">
+      <div class="horizontal">
         <div>
           
         </div>
