--- a/logIn.html
+++ b/logIn.html
@@ -41,7 +41,7 @@
       </form>
       </div>
     </div>
-    <div class="dark">
+    <div class="horizontal">
       <div>
       </div>
         
