--- a/agregar.html
+++ b/agregar.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="nav">
-            <a href="index.html" id="conditionalLink navActive">Forestaton</a>
+            <a href="index.html" id="conditionalLink" class="navActive">Forestaton</a>
             <a href="index.html" class="navA"><i class="fa-solid fa-house"></i>Inicio</a>
             <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i>Voluntariado</a>
             <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i>Noticias</a>
