Comentado el se parte de index

--- a/index.html
+++ b/index.html
@@ -85,7 +85,17 @@
       </div>
       <a>Se Parte</a>
     </div>
+<!--
+    <div class="index_separte">
+        <h1>Vos Podés Ser Parte <br>
+          El Cambio Está En Tus Manos</h1>
+          <h2>Te invitamos a sumarte como voluntario. Tu aporte es valioso</h2>
+          <a href="voluntariado.html">Quiero participar</a>
+        </div>
 
+
+
+-->
   </div>
   <div class="horizontal">
     <div>
