Inicio mobile parte 1

--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
       </span>
     </div>
     <div class="texto">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nam possimus, optio velit delectus
-      quisquam minima unde aspernatur quae dolorem explicabo nemo in neque maxime quia cum voluptatibus illum. Quod.
+      hola@forestaton.org.ar
     </div>
     <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="">
   </footer>
