--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </div>
     <nav class="nav">
       <a href="index.html" id="conditionalLink">Forestaton</a>
-      <a href="index.html" class="navA navActive"><i class="fa-solid fa-house"></i>Inicio</a>
-      <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i>Voluntariado</a>
-      <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i>Noticias</a>
-      <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i>Iniciar
-        sesión</a>
+      <a href="index.html" class="navA navActive"><i class="fa-solid fa-house"></i><span>Inicio</span></a>
+      <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i><span>Voluntariado</span></a>
+      <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i><span>Noticias</span></a>
+      <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i><span>Iniciar
+        sesión</span></a>
     </nav>
   </header>
   <div class="contenedorIndex">
@@ -59,6 +59,12 @@
           <i class="fa-regular fa-circle" onclick="cambiarImagen(2)"></i>
         </div>
       </div>
+    </div>
+
+    <div class="estadisticas_mobile">
+               <img src="img/estadisticas_mobile_1.png" alt="">
+               <img src="img/estadisticas_mobile_2.png" alt="">
+               <img src="img/estadisticas_mobile_3.png" alt="">
     </div>
 
     <div class="seParte">
