--- a/eventos.html
+++ b/eventos.html
@@ -20,12 +20,12 @@
           <div class="Imagen imagenMontania"></div>
         </div>
         <nav class="nav">
-          <a href="index.html" id="conditionalLink">Forestaton</a>
-     
-          <a href="index.html" class="navA">Inicio</a>
-          <a href="voluntariado.html" class="navA">Voluntariado</a>
-          <a href="noticias.html" class="navA">Noticias</a>
-          <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i>Iniciar sesión</a>
+          <a href="index.html" id="conditionalLink navActive">Forestaton</a>
+          <a href="index.html" class="navA"><i class="fa-solid fa-house"></i><span>Inicio</span></a>
+          <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i><span>Voluntariado</span></a>
+          <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i><span>Noticias</span></a>
+          <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i><span>Iniciar
+            sesión</span></a>
         </nav>
       </header>
       <div class="contenedor_eventos">
