Trabajo terminado(Parte 1)

--- a/eventos.html
+++ b/eventos.html
@@ -13,15 +13,15 @@
 <body>
     <header>
         <!-- Paso algo raro en el parallax, hay una ventana blanca emergente, que no se la procedencia. te estan hackeando hrmano tapa la camara!!-->
-        <div class="parallax">
+       <!-- <div class="parallax">
           <div class="Imagen imagenCielo"></div>
           <h2 class="tituloBanner">Forestaton</h2>
           <h2 class="tituloBanner">Forestaton</h2>
           <div class="Imagen imagenMontania"></div>
-        </div>
+        </div>-->
         <nav class="nav">
-          <a href="index.html" id="conditionalLink navActive">Forestaton</a>
-          <a href="index.html" class="navA"><i class="fa-solid fa-house"></i><span>Inicio</span></a>
+          <a href="index.html" id="conditionalLink">Forestaton</a>
+          <a href="index.html" class="navA navActive"><i class="fa-solid fa-house"></i><span>Inicio</span></a>
           <a href="voluntariado.html" class="navA"><i class="fa-solid fa-handshake-angle"></i><span>Voluntariado</span></a>
           <a href="noticias.html" class="navA"><i class="fa-solid fa-newspaper"></i><span>Noticias</span></a>
           <a href="logIn.html" class="navA" id="conditionalLinklogout"><i class="fa-solid fa-right-to-bracket"></i><span>Iniciar
@@ -53,11 +53,7 @@
             </form>
         </div>
     </div>
-      <div class="horizontal">
-        <div>
-          
-        </div>
-      </div>
+     
         <footer>
         <div class="redes">
           <span style="font-size: 3em;   background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);background-clip: text;">
@@ -75,8 +71,7 @@
           </span>
         </div>
         <div class="texto">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nam possimus, optio velit delectus
-          quisquam minima unde aspernatur quae dolorem explicabo nemo in neque maxime quia cum voluptatibus illum. Quod.
+          hola@forestaton.org.ar
         </div>
         <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="">
       </footer> 
