--- a/noticia.html
+++ b/noticia.html
@@ -21,12 +21,12 @@
   <body onload="detalle()">
     <header>
       <!-- Paso algo raro en el parallax, hay una ventana blanca emergente, que no se la procedencia. te estan hackeando hrmano tapa la camara!!-->
-      <div class="parallax">
+      <!--<div class="parallax">
         <div class="Imagen imagenCielo"></div>
         <h2 class="tituloBanner">Forestaton</h2>
         <h2 class="tituloBanner">Forestaton</h2>
         <div class="Imagen imagenMontania"></div>
-      </div>
+      </div>-->
       <nav class="nav">
         <a href="index.html" id="conditionalLink">Forestaton</a>
      
@@ -38,11 +38,7 @@
     </header>
 
     <div id="noticia_detalle"></div>
-    <div class="horizontal">
-      <div>
-      </div>
-        
-      </div>
+   
     <footer>
       <div class="redes">
         <span class="instagramLogo">
@@ -59,16 +55,13 @@
         </span>
       </div>
       <div class="texto">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem
-        nam possimus, optio velit delectus quisquam minima unde aspernatur quae
-        dolorem explicabo nemo in neque maxime quia cum voluptatibus illum.
-        Quod.
+        hola@forestaton.org.ar
       </div>
       <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="" />
     </footer>
     <script src="sesionHelper.js"></script>
     <script src="noticia.js"></script>
     <script src="noticias.js"></script>
-    <script src="parallax.js"></script>
+  
   </body>
 </html>
