--- a/voluntariado.html
+++ b/voluntariado.html
@@ -16,12 +16,12 @@
 <body>
   <header>
     <!-- Paso algo raro en el parallax, hay una ventana blanca emergente, que no se la procedencia. te estan hackeando hrmano tapa la camara!!-->
-    <div class="parallax">
+   <!-- <div class="parallax">
       <div class="Imagen imagenCielo"></div>
       <h2 class="tituloBanner">Forestaton</h2>
       <h2 class="tituloBanner">Forestaton</h2>
       <div class="Imagen imagenMontania"></div>
-    </div>
+    </div>-->
     <nav class="nav">
       <a href="index.html" id="conditionalLink">Forestaton</a>
      
@@ -39,7 +39,7 @@
     <div class="contenedorFormVoluntariado">
       <form action="#" class="formularioVoluntariado" id="form1">
         <h3>Sé parte de Forestaton</h3>
-        <input type="text" placeholder="Ingrese su email" required />
+        <input type="text" placeholder="Ingrese su email" required/>
         <div class="btnForm">
           <button type="button" id="next1">Continuar</button>
         </div>
@@ -78,11 +78,7 @@
       </div>
     </div>
   <div class="border-wrapper"></div>
-  <div class="horizontal">
-    <div>
-    </div>
-        
-    </div>
+  
   <footer>
     <div class="redes">
       <span class="instagramLogo">
@@ -100,14 +96,13 @@
       </span>
     </div>
     <div class="texto">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nam possimus, optio velit delectus
-      quisquam minima unde aspernatur quae dolorem explicabo nemo in neque maxime quia cum voluptatibus illum. Quod.
+      hola@forestaton.org.ar
     </div>
     <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="">
   </footer>
   <script src="sesionHelper.js"></script>
   <script src="voluntarioForm.js"></script>
-  <script src="parallax.js"></script>
+  
 </body>
 
 </html>
