--- a/logIn.html
+++ b/logIn.html
@@ -34,8 +34,10 @@
         <img src="img/logo forestaton.png" alt="Logo" srcset="">
         <label for="">Ingrese su Usuario o mail</label>
         <input type="text" placeholder="Username" id="usuario">
+        <span id="usuarioIncorrecto" style="color:red; margin: 0 auto;"></span>
         <label for="">Ingrese su contraseña</label>
         <input type="password" name="" placeholder="Password" id="contrasenia">
+        <span id="contraseniaIncorrecta" style="color:red; margin:0 auto;"></span>
         <h5><span>¿Ha olvidado su contraseña?</span></h5>
         <button type="submit">Login</button>
       </form>
@@ -63,7 +65,6 @@
       <img src="img\logo forestaton.png" class="Logo" alt="Logo" srcset="" />
     </footer>
       <script src="sesionHelper.js"></script>
-    
       <script src="loguearse.js"></script>
     </body>
 </html>
