--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       <h2 class="tituloBanner">Forestaton</h2>
       <h2 class="tituloBanner">Forestaton</h2>
       <div class="Imagen imagenMontania"></div>
+      <div class="flechas">
+        <i class="fa-solid fa-chevron-down flecha"></i>
+        <i class="fa-solid fa-chevron-down flecha"></i>
+        <i class="fa-solid fa-chevron-down flecha"></i>
+      </div>
     </div>
     <nav class="nav">
       <a href="index.html" id="conditionalLink">Forestaton</a>
