--- a/voluntariado.html
+++ b/voluntariado.html
@@ -32,14 +32,12 @@
     </nav>
   </header>
     <div class="introduccionform">
-      <h1>El cambio está en tus manos</h1>
-      <h2>El límite del desierto es un árbol</h2>
-      <p>Te invitamos a sumarte como voluntario. Tu aporte es valioso</p>
+      <p></p>
     </div>
     <div class="contenedorFormVoluntariado">
       <form action="#" class="formularioVoluntariado" id="form1">
         <h3>Sé parte de Forestaton</h3>
-        <input type="text" placeholder="Ingrese su email" required/>
+        <input type="text" placeholder="Ingrese su email" id="emailInput"/>
         <div class="btnForm">
           <button type="button" id="next1">Continuar</button>
         </div>
@@ -47,8 +45,8 @@
 
       <form action="#" class="formularioVoluntariado" id="form2">
         <h3>Ingrese sus datos</h3>
-        <input type="text" placeholder="Ingrese su nombre" />
-        <input type="text" placeholder="Ingrese su apellido" />
+        <input type="text" placeholder="Ingrese su nombre" id="nameInput"/>
+        <input type="text" placeholder="Ingrese su apellido"id="surnameInput" />
         <div class="btnForm">
           <button type="button" id="back1">Volver</button>
           <button type="button" id="next2">Continuar</button>
